--- a/app/src/main/res/xml/app_tracker.xml
+++ b/app/src/main/res/xml/app_tracker.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="160dp"
-    android:minHeight="40dp"
-    android:updatePeriodMillis="1800000"
-    android:initialLayout="@layout/expense_appwidget"
-    android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"
-    android:previewImage="@drawable/preview"
-    android:minResizeHeight="40dp"
-    android:minResizeWidth="80dp"
-    android:configure="com.adeneche.capstone.WidgetConfigureActivity"
-    >
-</appwidget-provider>
+<resources>
+    <!-- End current session if app sleeps for a period of time -->
+    <integer name="ga_sessionTimeout">300</integer>
+
+    <!-- Enable automatic Activity measurement -->
+    <bool name="ga_autoActivityTracking">true</bool>
+
+    <!--  The property id associated with this analytics tracker -->
+    <string name="ga_trackingId">UA-89524615-1</string>
+
+    <!--
+      See Project Structure -> Analytics -> Google Analytics -> Learn More
+      to learn more about configuring this file.
+    -->
+</resources>
