--- a/app/src/main/res/layout/expense_appwidget.xml
+++ b/app/src/main/res/layout/expense_appwidget.xml
@@ -11,15 +11,15 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@mipmap/ic_launcher"/>
-
+        android:src="@mipmap/ic_launcher"
+        android:contentDescription="@string/launcher"/>
     <TextView
         android:id="@+id/widget_text"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center"
-        android:text="000"
+        android:text="@string/default_text"
         android:textSize="@dimen/abc_text_size_large_material"
         android:textStyle="bold"/>
 
