--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -13,11 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number|numberDecimal"
-        android:hint="Type amount"/>
+        android:hint="@string/Type_amount"/>
     <EditText
         android:id="@+id/edit_expense_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Type description"/>
+        android:hint="@string/Type_description"/>
 
 </LinearLayout>
