--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:textSize="20dp"
-            android:text="Available"/>
+            android:text="@string/available"/>
         <TextView
             android:id="@+id/budget_available"
             android:layout_width="wrap_content"
