--- a/app/src/main/res/layout/expenselist_item.xml
+++ b/app/src/main/res/layout/expenselist_item.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/expense_amount"
         android:padding="10dp"
-        android:text="$200"
+        android:text="@string/descText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
